style.css
/* ... */
.content-wrap {
  width: 100%;
  max-width: 1260px;
  padding: 0 30px;
  margin: auto; }
  @media screen and (max-width: 560px) {
    .content-wrap {
      padding: 0 24px; } }

.regular-page {
  padding: 3em 0; }
  .regular-page b {
    font-weight: 700; }

.page-wrap {
  position: relative;
  transition: all 0.3s ease;
  left: 0;
  padding-top: 239px; }
  @media screen and (max-width: 1024px) {
    .page-wrap {
      padding-top: 105px; } }
  @media screen and (max-width: 560px) {
    .page-wrap {
      padding-top: 62px; } }
  .page-wrap.show-nav {
    left: -50%; }
    @media screen and (max-width: 560px) {
      .page-wrap.show-nav {
        left: -70%; } }

.main {
  position: relative; }

input,
button {
  font-family: "Avenir", "Lato", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }

.header {
  background: #000;
  color: #b3b3b3;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 97px 0;
  z-index: 9;
  transition: left .3s ease; }
  @media screen and (max-width: 1024px) {
    .header {
      padding: 30px 0; } }
  @media screen and (max-width: 560px) {
    .header {
      padding: 10px 0;
      position: fixed; } }
  .header a {
    color: #fff;
    font-size: 14px; }
  .header .header-meta {
    float: right;
    width: 30%; }
    @media screen and (max-width: 1024px) {
      .header .header-meta {
        width: 35%; } }
    @media screen and (max-width: 768px) {
      .header .header-meta {
        display: none; } }
  .header.sticky {
    position: fixed;
    padding: 25px 0;
    -webkit-animation: slideFromTop .3s ease forwards;
    animation: slideFromTop .3s ease forwards;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25); }
    @media screen and (max-width: 560px) {
      .header.sticky {
        -webkit-animation: none;
        animation: none;
        padding: 10px 0; } }
  .header.show-nav {
    left: -50%; }
    @media screen and (max-width: 560px) {
      .header.show-nav {
        left: -70%; } }

@-webkit-keyframes slideFromTop {
  0% {
    top: -100%;
    opacity: 0; }
  100% {
    top: 0;
    opacity: 1; } }

@keyframes slideFromTop {
  0% {
    top: -100%;
    opacity: 0; }
  100% {
    top: 0;
    opacity: 1; } }

.logo-wrap {
  float: left;
  margin-right: 11.2%;
  padding: 14px 0 13px; }
  @media screen and (max-width: 1024px) {
    .logo-wrap {
      margin-right: 5%; } }
  @media screen and (max-width: 768px) {
    .logo-wrap {
      margin: 0 auto;
      width: 100%; } }

.logo {
  width: 162px;
  height: 18px;
  background: transparent url("img/logo.png") no-repeat center center;
  background-size: contain;
  transition: all 0.3s ease; }
  @media screen and (max-width: 768px) {
    .logo {
      margin: 0 auto; } }
  @media screen and (max-width: 560px) {
    .logo {
      width: 135px;
      height: 15px; } }
  .logo span {
    display: inline-block;
    text-indent: -9999px; }
  .logo:hover {
    opacity: .8; }

.main-nav {
  float: left; }
  @media screen and (max-width: 768px) {
    .main-nav {
      display: none; } }
  .main-nav a {
    display: block;
    padding: 9px 0;
    margin-right: 50px;
    color: #fff;
    font-size: 12px;
    letter-spacing: .15em;
    text-transform: uppercase;
    border-bottom: 2px solid transparent; }
    @media screen and (max-width: 1024px) {
      .main-nav a {
        margin-right: 25px; } }
    .main-nav a:hover {
      border-bottom: 2px solid #a82e37;
      color: #efeeed; }
  .main-nav li {
    float: left; }
    .main-nav li:last-child a {
      margin-right: 0; }
    .main-nav li.current-menu-item a {
      border-color: #a82e37; }

.search-wrap {
  float: left;
  width: calc(100% - 130px - 22px);
  margin-right: 22px; }
  @media screen and (max-width: 1024px) {
    .search-wrap {
      width: auto;
      float: right;
      margin-right: 0;
      margin-left: 11px; } }
  .search-wrap .search-input {
    height: 45px;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background: transparent;
    border: 0;
    margin: 0;
    padding: 0;
    margin-left: 10px;
    font-size: 12px;
    color: rgba(255, 255, 255, 0.5);
    border-bottom: 1px solid #333333;
    max-width: 200px;
    width: calc(100% - 45px - 10px);
    float: left;
    font-style: italic;
    transition: all 0.3s ease; }
    .search-wrap .search-input:focus {
      outline: none;
      border-color: #a82e37; }
    @media screen and (max-width: 1024px) {
      .search-wrap .search-input {
        display: none; } }
  .search-wrap .search-submit {
    padding: 0;
    margin: 0;
    width: 45px;
    height: 45px;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    float: left;
    border: 0;
    background: transparent;
    color: #fff; }
    @media screen and (max-width: 1024px) {
      .search-wrap .search-submit {
        float: right; } }
    .search-wrap .search-submit::before {
      content: '\f002';
      font-family: 'FontAwesome'; }
    .search-wrap .search-submit span {
      display: inline-block;
      text-indent: -9999px; }
    .search-wrap .search-submit:focus {
      outline: none; }
  .search-wrap label.search {
    float: left;
    width: 100%; }

.cart-nav {
  float: right;
  color: #fff;
  text-align: right;
  padding: 9px 0; }
  @media screen and (max-width: 768px) {
    .cart-nav {
      display: none; } }
  .cart-nav a {
    font-size: 14px; }
  .cart-nav .cart-count {
    background: transparent;
    padding: 9px; }
    .cart-nav .cart-count::before {
      content: '\f07a';
      font-family: 'FontAwesome';
      margin-right: .5em;
      transition: all 0.3s ease; }
    .cart-nav .cart-count:hover {
      background: #a82e37; }

.hamburger {
  position: absolute;
  width: 24px;
  height: 12px;
  top: 50%;
  right: 20px;
  margin-top: -8px;
  cursor: pointer;
  display: none; }
  @media screen and (max-width: 768px) {
    .hamburger {
      display: block; } }
/* ... */

